--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <h1 class="logo-name">Cat House</h1>
                 </div>
                 <nav class="nav">
-                    <a href="" class="nav-link">О нас</a>
-                    <a href="" class="nav-link">Блог</a>
-                    <a href="" class="nav-link">Наши подопечные</a>
+                    <a href="about.html" class="nav-link">О нас</a>
+                    <a href="blog.html" class="nav-link">Блог</a>
+                    <a href="catalog.html" class="nav-link">Наши подопечные</a>
                     <a href="" class="nav-link">Отдать кота</a>
                     <a href="" class="nav-link">Помощь</a>
                 </nav>
@@ -65,6 +65,8 @@
         </div>
 
 
+      
+
         <div class="more-roomers">
             <div class="more-roomers-inner">
                 <h1>Больше котов - в нашем КОТологе</h1>
@@ -73,6 +75,97 @@
                 </a>
             </div>
         </div>
+
+
+
+        <div class="about">
+            <div class="container">
+                <div class="about-inner">
+                    <h1 class="about-header">
+                        О Нас
+                    </h1>
+                    <div class="about-text-block">
+                        <p class="about-text">
+                            Наш ценрт помощи - место, где помогают деже саммым безнадёжным случаям.
+                        </p>
+                        <p class="about-text">
+                            Под нашей опекой как здоровые котики, так и животные с тяжелой инвалидностью, старички и малыши, которые нуждаются
+                            в круглосуточной заботе.
+                        </p>
+                        <p class="about-text">
+                            Всё это возиожно благодаря работе наших волонтёрам и людям, которым не всё ранво. Каждый день небезразличные люди приходят в наш центра и ухаживают за котами, не получая никакого денежного вознагражения.
+                            Всё, чего добились за время существования нашего центра сделанно на голом авантюризме не безразличных людей.
+                        </p>
+                        <p class="about-text">
+                            брать с улицы, вылечить, социализировать, привить, стерилизовать, найти новый дом — мы делаем это каждый день и понимаем, как велика ответственность. Ведь цена нашей работы — спасенная жизнь. Для кого-то маленькая, а для нас — это целый мир.
+                        </p>
+                    </div>
+                    <div class="about-photo">
+                        <a  class="prev" id="prev">&#10094</a>
+                        <div class="slider">
+                        <div class="about-photo-carousel" id="carousel">
+                            <img src="home1.jpg" alt="" class="home-photo">
+                            <img src="home2.jpg" alt="" class="home-photo">
+                            <img src="home3.jpg" alt="" class="home-photo">
+                            <img src="home4.jpeg" alt="" class="home-photo">
+                            <img src="home5.jpg" alt="" class="home-photo">
+                            <img src="home6.jpg" alt="" class="home-photo">
+                            <img src="home7.jpg" alt="" class="home-photo">
+                            <img src="home8.jpg" alt="" class="home-photo">
+                            <img src="home9.jpg" alt="" class="home-photo">
+                        </div>
+                        </div>
+                        <a  class="next" id="next">&#10095</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="sposnsors-block">
+            <div class="container">
+                <div class="sponsors-block-inner">
+                    <h1 class="sponsors-header">Как стать нашим партнёром</h1>
+                    <a href="" class="feedback-btn">Стать партнёром</a>
+                    <p class="sponsors-text">
+                        Если вы представитель бизнеса, мы можем вместе придумать интеграцию, которая будет полезна и для наших подопечных, и для вашего дела. Пожалуйста, заполните форму обратной связи — и мы с вами обязательно свяжемся.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-inner">
+                    <div class="left-footer">
+                        <h1 class="footer-header">Центр помощи "Старый кот"</h1>
+                        <p class="footer-adress">УНП 12345678984</p>
+                        <p class="footer-adress">Зарегистровано 07.11.2000. Минский горисполком</p>
+                        <p class="footer-adress">Республика Беларусь, 220117, г.Минск, улица Пушкина, дом Колутушкина</p>
+                    </div>
+                    <div class="right-footer">
+                        <h1 class="footer-header">Контакты</h1>
+                        <p class="footer-adress"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24" width="24" height="24"><path d="M13,1a1,1,0,0,1,1-1A10.011,10.011,0,0,1,24,10a1,1,0,0,1-2,0,8.009,8.009,0,0,0-8-8A1,1,0,0,1,13,1Zm1,5a4,4,0,0,1,4,4,1,1,0,0,0,2,0,6.006,6.006,0,0,0-6-6,1,1,0,0,0,0,2Zm9.093,10.739a3.1,3.1,0,0,1,0,4.378l-.91,1.049c-8.19,7.841-28.12-12.084-20.4-20.3l1.15-1A3.081,3.081,0,0,1,7.26.906c.031.031,1.884,2.438,1.884,2.438a3.1,3.1,0,0,1-.007,4.282L7.979,9.082a12.781,12.781,0,0,0,6.931,6.945l1.465-1.165a3.1,3.1,0,0,1,4.281-.006S23.062,16.708,23.093,16.739Zm-1.376,1.454s-2.393-1.841-2.424-1.872a1.1,1.1,0,0,0-1.549,0c-.027.028-2.044,1.635-2.044,1.635a1,1,0,0,1-.979.152A15.009,15.009,0,0,1,5.9,9.3a1,1,0,0,1,.145-1S7.652,6.282,7.679,6.256a1.1,1.1,0,0,0,0-1.549c-.031-.03-1.872-2.425-1.872-2.425a1.1,1.1,0,0,0-1.51.039l-1.15,1C-2.495,10.105,14.776,26.418,20.721,20.8l.911-1.05A1.121,1.121,0,0,0,21.717,18.193Z"/></svg>
+                            +375 (29) 123-45-67</p>
+                        <p class="footer-adress">
+                            <svg xmlns="http://www.w3.org/2000/svg" id="Outline" viewBox="0 0 24 24" width="24" height="24"><path d="M19,1H5A5.006,5.006,0,0,0,0,6V18a5.006,5.006,0,0,0,5,5H19a5.006,5.006,0,0,0,5-5V6A5.006,5.006,0,0,0,19,1ZM5,3H19a3,3,0,0,1,2.78,1.887l-7.658,7.659a3.007,3.007,0,0,1-4.244,0L2.22,4.887A3,3,0,0,1,5,3ZM19,21H5a3,3,0,0,1-3-3V7.5L8.464,13.96a5.007,5.007,0,0,0,7.072,0L22,7.5V18A3,3,0,0,1,19,21Z"/></svg>
+
+                            cathouse@gmail.com</p>
+                        <p class="footer-adress">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve" width="24" height="24">
+                                <g>
+                                    <path d="M12,2.162c3.204,0,3.584,0.012,4.849,0.07c1.308,0.06,2.655,0.358,3.608,1.311c0.962,0.962,1.251,2.296,1.311,3.608   c0.058,1.265,0.07,1.645,0.07,4.849c0,3.204-0.012,3.584-0.07,4.849c-0.059,1.301-0.364,2.661-1.311,3.608   c-0.962,0.962-2.295,1.251-3.608,1.311c-1.265,0.058-1.645,0.07-4.849,0.07s-3.584-0.012-4.849-0.07   c-1.291-0.059-2.669-0.371-3.608-1.311c-0.957-0.957-1.251-2.304-1.311-3.608c-0.058-1.265-0.07-1.645-0.07-4.849   c0-3.204,0.012-3.584,0.07-4.849c0.059-1.296,0.367-2.664,1.311-3.608c0.96-0.96,2.299-1.251,3.608-1.311   C8.416,2.174,8.796,2.162,12,2.162 M12,0C8.741,0,8.332,0.014,7.052,0.072C5.197,0.157,3.355,0.673,2.014,2.014   C0.668,3.36,0.157,5.198,0.072,7.052C0.014,8.332,0,8.741,0,12c0,3.259,0.014,3.668,0.072,4.948c0.085,1.853,0.603,3.7,1.942,5.038   c1.345,1.345,3.186,1.857,5.038,1.942C8.332,23.986,8.741,24,12,24c3.259,0,3.668-0.014,4.948-0.072   c1.854-0.085,3.698-0.602,5.038-1.942c1.347-1.347,1.857-3.184,1.942-5.038C23.986,15.668,24,15.259,24,12   c0-3.259-0.014-3.668-0.072-4.948c-0.085-1.855-0.602-3.698-1.942-5.038c-1.343-1.343-3.189-1.858-5.038-1.942   C15.668,0.014,15.259,0,12,0z"/>
+                                    <path d="M12,5.838c-3.403,0-6.162,2.759-6.162,6.162c0,3.403,2.759,6.162,6.162,6.162s6.162-2.759,6.162-6.162   C18.162,8.597,15.403,5.838,12,5.838z M12,16c-2.209,0-4-1.791-4-4s1.791-4,4-4s4,1.791,4,4S14.209,16,12,16z"/>
+                                    <circle  cx="18.406" cy="5.594" r="1.44"/>
+                                </g>
+                                </svg>
+                            @cathouseminsk</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <script src="script.js"></script>
     </main>
 </body>
 </html>
