--- a/catalog.html
+++ b/catalog.html
@@ -14,16 +14,20 @@
 </head>
 <body>
     <header class="header">
+        <button class="header__burger-btn" id="burger">
+            <span></span><span></span><span></span>
+        </button>
         <div class="container">
             <div class="header-inner">
                 <div class="logo">
-                    <h1 class="logo-name">Cat House</h1>
+                    <a href="index.html"><h1 class="logo-name">Cat House</h1></a>
+
                 </div>
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a href="about.html" class="nav-link">О нас</a>
-                    <a href="" class="nav-link">Блог</a>
-                    <a href="" class="nav-link">Наши подопечные</a>
-                    <a href="" class="nav-link">Отдать кота</a>
+                    <a href="blog.html" class="nav-link">Блог</a>
+                    <a href="catalog.html" class="nav-link">Наши подопечные</a>
+                    <a href="giveaway.html" class="nav-link">Отдать кота</a>
                     <a href="help.html" class="nav-link">Помощь</a>
                 </nav>
             </div>
@@ -106,5 +110,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
