--- a/help.html
+++ b/help.html
@@ -14,17 +14,21 @@
         </head>
         <body>
             <header class="header">
+                <button class="header__burger-btn" id="burger">
+                    <span></span><span></span><span></span>
+                </button>
                 <div class="container">
                     <div class="header-inner">
                         <div class="logo">
-                            <h1 class="logo-name">Cat House</h1>
+                            <a href="index.html"><h1 class="logo-name">Cat House</h1></a>
+
                         </div>
-                        <nav class="nav">
+                        <nav class="nav" id="nav">
                             <a href="about.html" class="nav-link">О нас</a>
-                            <a href="" class="nav-link">Блог</a>
-                            <a href="" class="nav-link">Наши подопечные</a>
+                            <a href="blog.html" class="nav-link">Блог</a>
+                            <a href="catalog.html" class="nav-link">Наши подопечные</a>
                             <a href="giveaway.html" class="nav-link">Отдать кота</a>
-                            <a href="" class="nav-link">Помощь</a>
+                            <a href="help.html" class="nav-link">Помощь</a>
                         </nav>
                     </div>
                 </div>
@@ -38,7 +42,7 @@
                     <div class="container">
                         <div class="help-inner">
                             <div class="card-block">
-                                <img src="cards.jpg" alt="" class="donate-img" width="400" height="300">
+                                <img src="cards.jpg" alt="" class="donate-img" width="320" height="220">
                                 <h3 class="card-header">Сделать разовое пожертвование банковской картой</h3>
                                 <p class="donate-text">Альфа-банк: 0000 0000 0000 0000</p>
                                 <p class="donate-text">Сбер-банк: 0000 0000 0000 0000</p>
@@ -46,7 +50,7 @@
                                 <p class="donate-text">МТБ-банк: 0000 0000 0000 0000</p>
                             </div>
                             <div class="erip-block">
-                                <img src="erip.png" alt="" class="donate-img" width="400" height="300">
+                                <img src="erip.png" alt="" class="donate-img" width="320" height="220">
                                 <h3 class="card-header">Сделать разовое пожертвование через систему платежей "ЕРИП"</h3>
                                 <p class="donate-text">Код услуги: 000000000</p>
                                 <p>ИЛИ</p>
@@ -100,6 +104,8 @@
                 </div>
             </footer>
         </body>
+    <script src="script.js"></script>
+
         </html></title>
 </head>
 <body>
