--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Cat House</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
+        <button class="header__burger-btn" id="burger">
+            <span></span><span></span><span></span>
+        </button>
         <div class="container">
             <div class="header-inner">
                 <div class="logo">
-                    <h1 class="logo-name">Cat House</h1>
+                    <a href="index.html"><h1 class="logo-name">Cat House</h1></a>
+
                 </div>
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a href="about.html" class="nav-link">О нас</a>
                     <a href="blog.html" class="nav-link">Блог</a>
                     <a href="catalog.html" class="nav-link">Наши подопечные</a>
-                    <a href="" class="nav-link">Отдать кота</a>
-                    <a href="" class="nav-link">Помощь</a>
+                    <a href="giveaway.html" class="nav-link">Отдать кота</a>
+                    <a href="help.html" class="nav-link">Помощь</a>
                 </nav>
             </div>
         </div>
@@ -69,7 +73,7 @@
 
         <div class="more-roomers">
             <div class="more-roomers-inner">
-                <h1>Больше котов - в нашем КОТологе</h1>
+                <h1 class="more-roomers-header">Больше котов - в нашем КОТологе</h1>
                 <a href="" class="morecats-btn">
                     КОТОЛОГ
                 </a>
@@ -167,5 +171,6 @@
         </footer>
         <script src="script.js"></script>
     </main>
+   
 </body>
 </html>
