--- a/giveaway.html
+++ b/giveaway.html
@@ -14,17 +14,21 @@
         </head>
         <body>
             <header class="header">
+                <button class="header__burger-btn" id="burger">
+                    <span></span><span></span><span></span>
+                </button>
                 <div class="container">
                     <div class="header-inner">
                         <div class="logo">
-                            <h1 class="logo-name">Cat House</h1>
+                            <a href="index.html"><h1 class="logo-name">Cat House</h1></a>
+
                         </div>
-                        <nav class="nav">
+                        <nav class="nav" id="nav">
                             <a href="about.html" class="nav-link">О нас</a>
-                            <a href="" class="nav-link">Блог</a>
-                            <a href="" class="nav-link">Наши подопечные</a>
-                            <a href="" class="nav-link">Отдать кота</a>
-                            <a href="" class="nav-link">Помощь</a>
+                            <a href="blog.html" class="nav-link">Блог</a>
+                            <a href="catalog.html" class="nav-link">Наши подопечные</a>
+                            <a href="giveaway.html" class="nav-link">Отдать кота</a>
+                            <a href="help.html" class="nav-link">Помощь</a>
                         </nav>
                     </div>
                 </div>
@@ -36,7 +40,7 @@
                     <div class="container">
                         <div class="giveaway-inner">
                             <div class="left-side">
-                                <img src="whatt.jpg" alt="" >
+                                <img src="whatt.jpg" alt="" class="question-img">
                             </div>
                             <div class="rights-side">
                                 <p class="giveaway-text">Центр помощи “Старый кот” часто получает сообщения и звонки с одной и той же просьбой: “Заберите бездомного котика”. Мы благодарны каждому, кто проявляет сочувствие к животным, и нам очень грустно, когда мы не можем вам ответить: “Конечно, привозите!”.</p>
