--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="footer-inner">
                 <div class="left-footer">
-                    <h1 class="footer-header">Центр помощи "Старый кот"</h1>
+                    <h1 class="footer-header">Центр помощи "Cat House"</h1>
                     <p class="footer-adress">УНП 12345678984</p>
                     <p class="footer-adress">Зарегистровано 07.11.2000. Минский горисполком</p>
                     <p class="footer-adress">Республика Беларусь, 220117, г.Минск, улица Пушкина, дом Колутушкина</p>
